made: swagger documentation for logout
